// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal useModal opens and closes modal 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
      <div
        class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center"
      >
        <div
          class="fixed inset-0 z-0"
          data-disabled="false"
        >
          <div
            aria-hidden="true"
            class="opacity-0 transition-opacity fixed -z inset-0 bg-black -webkit-tap-highlight-color bg-opacity"
            style="transition-duration: 300ms; opacity: 1;"
          />
        </div>
        <div
          aria-describedby="radix-:r2:"
          aria-labelledby="radix-:r1:"
          class="outline-none pointer-events"
          data-state="open"
          id="radix-:r0:"
          role="dialog"
          style="position: relative; z-index: 1; max-height: 100%; margin: auto; display: flex;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-none overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            style="transition-duration: 300ms; opacity: 1; max-height: inherit; height: auto; overflow: auto;"
            tabindex="-1"
          >
            <p>
              Modal content
            </p>
            <button
              aria-disabled="false"
              class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
              data-component-type="button"
              role="button"
              tabindex="0"
              type="button"
            >
              <span
                class="items-center inline-flex font-semibold whitespace-nowrap text-button"
              >
                Hide
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Modal useModal opens and closes modal 2`] = `
<body>
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Modal useModal shows multiple modals at the same time 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show first
        </span>
      </button>
      <button
        aria-disabled="false"
        class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show second
        </span>
      </button>
      <div
        class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center"
      >
        <div
          class="fixed inset-0 z-0"
          data-disabled="false"
        >
          <div
            aria-hidden="true"
            class="opacity-0 transition-opacity fixed -z inset-0 bg-black -webkit-tap-highlight-color bg-opacity"
            style="transition-duration: 300ms; opacity: 1;"
          />
        </div>
        <div
          aria-describedby="radix-:r5:"
          aria-labelledby="radix-:r4:"
          class="outline-none pointer-events"
          data-state="open"
          id="radix-:r3:"
          role="dialog"
          style="position: relative; z-index: 1; max-height: 100%; margin: auto; display: flex;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-none overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            style="transition-duration: 300ms; opacity: 1; max-height: inherit; height: auto; overflow: auto;"
            tabindex="-1"
          >
            <p>
              First modal content
            </p>
          </div>
        </div>
      </div>
      <div
        class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center"
      >
        <div
          class="fixed inset-0 z-0"
          data-disabled="false"
        >
          <div
            aria-hidden="true"
            class="opacity-0 transition-opacity fixed -z inset-0 bg-black -webkit-tap-highlight-color bg-opacity"
            style="transition-duration: 300ms; opacity: 1;"
          />
        </div>
        <div
          aria-describedby="radix-:r8:"
          aria-labelledby="radix-:r7:"
          class="outline-none pointer-events"
          data-state="open"
          id="radix-:r6:"
          role="dialog"
          style="position: relative; z-index: 1; max-height: 100%; margin: auto; display: flex;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-none overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            style="transition-duration: 300ms; opacity: 1; max-height: inherit; height: auto; overflow: auto;"
            tabindex="-1"
          >
            <p>
              Second modal content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
